--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,6 @@ body{
     background-repeat: no-repeat ;
     background-attachment: fixed; */
 }
-#filler{
+#fille,#progress{
     background:linear-gradient(to right,rgba(0,0,0,.5),rgba(0,0,0,.9)) ,url(../img/projects-1.jpeg)center/cover no-repeat fixed;
 }
